# avp-2019

lab1/: CMakeLists.txt  main.cpp
lab1/matrix/: BigMatrix.cpp  BigMatrix.h  InnerMatrix.cpp  InnerMatrix.h  OuterMatrix.cpp  OuterMatrix.h
lab1/random/: random.cpp  random.h
lab4/: lab4.1.sln
lab4.1/: lab4.1.sln
lab4.1/lab4.1/: kernel.cu
lab4/lab4.1/: kernel.cu
lab5/: lab5.sln
lab5/lab5/: image3.pgm  image_cpu.pgm  image_gpu.pgm  kernel.cu
lab6/: lab6.sln
lab6/lab6/: kernel.cu
